<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_spacing"
            android:text="@string/back_button_text"/>
        <!-- First Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_first_name_hint"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Last Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_last_name_hint"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of Birth -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_dob_hint"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Weight -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_weight_hint"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Height -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_spacing">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save Button -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"/>
    </LinearLayout>
</ScrollView>